# oamlStudio

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  deploy-appimage.sh  oamlStudio.desktop
cmake/modules/: FindOAML.cmake
include/: aif.h  audioFilePanel.h  audioPanel.h  controlPanel.h  layerPanel.h  oaml.h  oamlCommon.h  oamlStudio.h  playbackFrame.h  settingsFrame.h  startupFrame.h  studioFrame.h  trackControl.h  trackPanel.h  waveformDisplay.h
src/: audioFilePanel.cpp  audioPanel.cpp  controlPanel.cpp  layerPanel.cpp  oamlCallbacks.cpp  oamlStudio.cpp  playbackFrame.cpp  settingsFrame.cpp  startupFrame.cpp  studioFrame.cpp  trackControl.cpp  trackPanel.cpp  waveformDisplay.cpp
vs/: oamlStudio.sln  oamlStudio.vcxproj  oamlStudio.vcxproj.filters
